crates/science-parser/tests/snapshots/parse_multi_closure__a_multi_parameter_closure_as_an_argument.snap
---
source: crates/science-parser/tests/parse_multi_closure.rs
expression: "shape_of_expr(\"xs.reduce(0, (acc, x) giving acc + x)\")"
---
Method `reduce`
  receiver: Path `xs`
  args
    Int 0
    Closure
      param: Ident `acc`
      param: Ident `x`
      body: Binary `+`
        lhs: Path `acc`
        rhs: Path `x`
