crates/science-parser/tests/snapshots/parse_multi_closure__a_tuple_of_names_is_still_a_tuple.snap
---
source: crates/science-parser/tests/parse_multi_closure.rs
expression: "shape_of_expr(\"(a, b)\")"
---
Tuple
  Path `a`
  Path `b`
