crates/science-parser/tests/snapshots/parse_multi_closure__the_body_extends_to_the_end_of_the_expression.snap
---
source: crates/science-parser/tests/parse_multi_closure.rs
expression: "shape_of_expr(\"(a, b) giving if a > b: a else: b\")"
---
Closure
  param: Ident `a`
  param: Ident `b`
  body: If
    cond: Binary `>`
      lhs: Path `a`
      rhs: Path `b`
    then: Block
      tail: Path `a`
    else: Block
      tail: Path `b`
