crates/science-parser/tests/snapshots/parse_multi_closure__two_names_before_giving_are_one_closure.snap
---
source: crates/science-parser/tests/parse_multi_closure.rs
expression: "shape_of_expr(\"(acc, x) giving acc + x\")"
---
Closure
  param: Ident `acc`
  param: Ident `x`
  body: Binary `+`
    lhs: Path `acc`
    rhs: Path `x`
